sound: Implement COMPAT_FREEBSD32 shims

PR:		216568
MFC after:	1 week
Reviewed by:	christos, kib
Differential Revision:	https://reviews.freebsd.org/D52509

(cherry picked from commit 749a9266982b8e012b5ec370b2fdfef11f34c0b2)